k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-video-test-deployment
  labels:
    app: web-video-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-video-test
  template:
    metadata:
      labels:
        app: web-video-test
    spec:
      containers:
      - name: web-video-test
        image: gcr.io/pixelaether/wvt-alpha:v0.0.1
        ports:
        - containerPort: 80
