k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web-video-test
  name: web-video-test-service
  selfLink: /api/v1/namespaces/charles/services/99f
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-video-test
  type: ClusterIP
